--- a/core/static/css/base.css
+++ b/core/static/css/base.css
@@ -1,19 +1,16 @@
-body{
+body {
     background-image: url(../img/fondo_claro.jpg);
-    background-size:cover  ;
-    
+    background-size: cover;
 }
 
-label{
-
-    background-color:  rgb(156, 128, 128);
-    color: rgb(17, 1, 1) ;
+label {
+    background-color: rgb(156, 128, 128);
+    color: rgb(17, 1, 1);
     border: 1px solid rgb(77, 60, 60);
-    font-weight:bolder;
+    font-weight: bolder;
 }
 
-#id_files{
-
+#id_files {
     color: white;
 }
 
@@ -25,17 +22,18 @@ section {
     padding-top: 4rem;
     padding-bottom: 5rem;
 }
+
 .wrap {
     display: flex;
     background: white;
     padding: 1rem 1rem 1rem 1rem;
     border-radius: 0.5rem;
-    box-shadow: 7px 7px 30px -5px rgba(0,0,0,0.1);
+    box-shadow: 7px 7px 30px -5px rgba(0, 0, 0, 0.1);
     margin-bottom: 2rem;
 }
 
 .wrap:hover {
-    background: linear-gradient(135deg,#6394ff 0%,#0a193b 100%);
+    background: linear-gradient(135deg, #6394ff 0%, #0a193b 100%);
     color: white;
 }
 
@@ -49,6 +47,7 @@ section {
     margin: 1rem;
     padding-right: 1rem;
 }
+
 .vcenter {
     margin: auto;
 }
@@ -56,23 +55,28 @@ section {
 .mbr-section-title3 {
     text-align: left;
 }
+
 h2 {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
 }
+
 .display-5 {
-    font-family: 'Source Sans Pro',sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 1.4rem;
 }
+
 .mbr-bold {
     font-weight: 700;
 }
 
- p {
+p {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     line-height: 25px;
 }
+
 .display-6 {
-    font-family: 'Source Sans Pro',sans-serif;
-    font-size: 1re}
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 1re
+}
