--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,7 +16,8 @@
 
 <body>
     {% comment %} inicio de navbar {% endcomment %}
-    <nav class="navbar navbar-expand-lg navbar-light " id = id_navbar>
+    {% comment %} fnjafbnhjahjkf {% endcomment %}
+    <nav class="navbar navbar-expand-lg navbar bg-dark " id = id_navbar>
         <a class="navbar-brand text-light" href="{% url 'index' %}">Lex</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -120,6 +121,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
