--- a/core/templates/core/signin.html
+++ b/core/templates/core/signin.html
@@ -11,6 +11,48 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Document</title>
+    <style>
+        body{font-family: Arial; background-color: #426e93; box-sizing: border-box;}
+        .container{
+			background-color: white;
+			border-radius: 10px;
+			color: #999;
+			font-size: 0.8em;
+			padding: 20px;
+			margin: auto;
+            margin-top: 100px;
+			width: 400px;
+		}
+        .btn{
+	border-radius: 3px;
+	display: inline-block;
+	padding: 10px 15px;
+	text-decoration: none;
+	text-shadow: 0 1px 0 rgba(255,255,255,0.3);
+	box-shadow: 0 1px 1px rgba(0,0,0,0.3); 
+}
+
+.btn-green{
+	color: white;
+	background-color: #3CC93F;
+}
+.btn-green:hover{
+	background-color: #37B839;	
+}
+.btn-green:active{
+	background-color: #29962A;
+}
+.btn-blue{
+	color: white;
+	background-color: #3361FF;
+}
+.btn-blue:hover{
+	background-color: #3361FF;	
+}
+.btn-blue:active{
+	background-color: #3361FF;
+}
+    </style>
 </head>
 
 <body>
@@ -19,8 +61,8 @@
             <form action="" method="post">
                 {% csrf_token %}
                 {{user.as_p}}
-                <button type="submit">Registrar</button>
-                <button onclick="location=`{% url 'login' %}`">Volver</button>
+                <button type="submit" class="btn btn-green">Registrar</button>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                <button class="btn btn-blue" onclick="location=`{% url 'login' %}`">Volver</button>
             </form>
             <p id="id_error">{{error}}</p>
         </div>
